// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratePropsJavaPojo can generate fixture ARRAY_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsObjectElement.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;

public class ArrayPropsNativeComponentPropsObjectElement {
  private @Nullable String mStringProp;
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsArrayElementObjectElement.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;

public class ArrayPropsNativeComponentPropsArrayElementObjectElement {
  private @Nullable String mStringProp;
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsArrayElement.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import java.util.ArrayList;

public class ArrayPropsNativeComponentPropsArrayElement {
  private ArrayList<ArrayPropsNativeComponentPropsArrayElementObjectElement> mObject;
  public ArrayList<ArrayPropsNativeComponentPropsArrayElementObjectElement> getObject() {
    return mObject;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;

public class ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement {
  private @Nullable String mStringProp;
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;
import java.util.ArrayList;

public class ArrayPropsNativeComponentProps {
  private ArrayList<@Nullable String> mNames;
  private ArrayList<Boolean> mDisableds;
  private ArrayList<Integer> mProgress;
  private ArrayList<Float> mRadii;
  private ArrayList<@Nullable Integer> mColors;
  private ArrayList<@Nullable ReadableMap> mSrcs;
  private ArrayList<@Nullable ReadableMap> mPoints;
  private ArrayList<@Nullable String> mSizes;
  private ArrayList<ArrayPropsNativeComponentPropsObjectElement> mObject;
  private ArrayList<ArrayPropsNativeComponentPropsArrayElement> mArray;
  private ArrayList<ArrayList<ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement>> mArrayOfArrayOfObject;
  public ArrayList<@Nullable String> getNames() {
    return mNames;
  }
  public ArrayList<Boolean> getDisableds() {
    return mDisableds;
  }
  public ArrayList<Integer> getProgress() {
    return mProgress;
  }
  public ArrayList<Float> getRadii() {
    return mRadii;
  }
  public ArrayList<@Nullable Integer> getColors() {
    return mColors;
  }
  public ArrayList<@Nullable ReadableMap> getSrcs() {
    return mSrcs;
  }
  public ArrayList<@Nullable ReadableMap> getPoints() {
    return mPoints;
  }
  public ArrayList<@Nullable String> getSizes() {
    return mSizes;
  }
  public ArrayList<ArrayPropsNativeComponentPropsObjectElement> getObject() {
    return mObject;
  }
  public ArrayList<ArrayPropsNativeComponentPropsArrayElement> getArray() {
    return mArray;
  }
  public ArrayList<ArrayList<ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement>> getArrayOfArrayOfObject() {
    return mArrayOfArrayOfObject;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsNativePrimitivesElement.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;
import java.util.ArrayList;

public class ArrayPropsNativeComponentPropsNativePrimitivesElement {
  private ArrayList<@Nullable Integer> mColors;
  private ArrayList<@Nullable ReadableMap> mSrcs;
  private ArrayList<@Nullable ReadableMap> mPoints;
  public ArrayList<@Nullable Integer> getColors() {
    return mColors;
  }
  public ArrayList<@Nullable ReadableMap> getSrcs() {
    return mSrcs;
  }
  public ArrayList<@Nullable ReadableMap> getPoints() {
    return mPoints;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import java.util.ArrayList;

public class ArrayPropsNativeComponentProps {
  private ArrayList<ArrayPropsNativeComponentPropsNativePrimitivesElement> mNativePrimitives;
  public ArrayList<ArrayPropsNativeComponentPropsNativePrimitivesElement> getNativePrimitives() {
    return mNativePrimitives;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/BooleanPropNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

public class BooleanPropNativeComponentProps {
  private boolean mDisabled;
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture COLOR_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/ColorPropNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;

public class ColorPropNativeComponentProps {
  private @Nullable Integer mTintColor;
  public @Nullable Integer getTintColor() {
    return mTintColor;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture COMMANDS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/CommandNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

public class CommandNativeComponentProps {


}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/CommandNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;

public class CommandNativeComponentProps {
  private @Nullable String mAccessibilityHint;
  public @Nullable String getAccessibilityHint() {
    return mAccessibilityHint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/DoublePropNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

public class DoublePropNativeComponentProps {
  private double mBlurRadius;
  private double mBlurRadius2;
  private double mBlurRadius3;
  private double mBlurRadius4;
  private double mBlurRadius5;
  private double mBlurRadius6;
  public double getBlurRadius() {
    return mBlurRadius;
  }
  public double getBlurRadius2() {
    return mBlurRadius2;
  }
  public double getBlurRadius3() {
    return mBlurRadius3;
  }
  public double getBlurRadius4() {
    return mBlurRadius4;
  }
  public double getBlurRadius5() {
    return mBlurRadius5;
  }
  public double getBlurRadius6() {
    return mBlurRadius6;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/EventsNestedObjectNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

public class EventsNestedObjectNativeComponentProps {
  private boolean mDisabled;
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EVENT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/EventsNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

public class EventsNativeComponentProps {
  private boolean mDisabled;
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/InterfaceOnlyComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

public class InterfaceOnlyComponentProps {


}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EXCLUDE_ANDROID 1`] = `Map {}`;

exports[`GeneratePropsJavaPojo can generate fixture EXCLUDE_ANDROID_IOS 1`] = `Map {}`;

exports[`GeneratePropsJavaPojo can generate fixture FLOAT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/FloatPropNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

public class FloatPropNativeComponentProps {
  private float mBlurRadius;
  private float mBlurRadius2;
  private float mBlurRadius3;
  private float mBlurRadius4;
  private float mBlurRadius5;
  private float mBlurRadius6;
  public float getBlurRadius() {
    return mBlurRadius;
  }
  public float getBlurRadius2() {
    return mBlurRadius2;
  }
  public float getBlurRadius3() {
    return mBlurRadius3;
  }
  public float getBlurRadius4() {
    return mBlurRadius4;
  }
  public float getBlurRadius5() {
    return mBlurRadius5;
  }
  public float getBlurRadius6() {
    return mBlurRadius6;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture IMAGE_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ImagePropNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;

public class ImagePropNativeComponentProps {
  private @Nullable ReadableMap mThumbImage;
  public @Nullable ReadableMap getThumbImage() {
    return mThumbImage;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INSETS_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ScrollView/InsetsPropNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ScrollView;

import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;

public class InsetsPropNativeComponentProps {
  private @Nullable ReadableMap mContentInset;
  public @Nullable ReadableMap getContentInset() {
    return mContentInset;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/Int32EnumPropsNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;

public class Int32EnumPropsNativeComponentProps {
  private @Nullable Integer mMaxInterval;
  public @Nullable Integer getMaxInterval() {
    return mMaxInterval;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INTEGER_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/IntegerPropNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

public class IntegerPropNativeComponentProps {
  private int mProgress1;
  private int mProgress2;
  private int mProgress3;
  public int getProgress1() {
    return mProgress1;
  }
  public int getProgress2() {
    return mProgress2;
  }
  public int getProgress3() {
    return mProgress3;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/InterfaceOnlyComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;

public class InterfaceOnlyComponentProps {
  private @Nullable String mAccessibilityHint;
  public @Nullable String getAccessibilityHint() {
    return mAccessibilityHint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ImageColorPropNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;

public class ImageColorPropNativeComponentProps {
  private @Nullable ReadableMap mThumbImage;
  private @Nullable Integer mColor;
  private @Nullable Integer mThumbTintColor;
  private @Nullable ReadableMap mPoint;
  public @Nullable ReadableMap getThumbImage() {
    return mThumbImage;
  }
  public @Nullable Integer getColor() {
    return mColor;
  }
  public @Nullable Integer getThumbTintColor() {
    return mThumbTintColor;
  }
  public @Nullable ReadableMap getPoint() {
    return mPoint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/NoPropsNoEvents/NoPropsNoEventsComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.NoPropsNoEvents;

public class NoPropsNoEventsComponentProps {


}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture OBJECT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropObjectArrayProp.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import java.util.ArrayList;

public class ObjectPropsPropsObjectPropObjectArrayProp {
  private ArrayList<@Nullable String> mArray;
  public ArrayList<@Nullable String> getArray() {
    return mArray;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;

public class ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp {
  private @Nullable ReadableMap mImage;
  private @Nullable Integer mColor;
  private @Nullable ReadableMap mPoint;
  public @Nullable ReadableMap getImage() {
    return mImage;
  }
  public @Nullable Integer getColor() {
    return mColor;
  }
  public @Nullable ReadableMap getPoint() {
    return mPoint;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedPropANestedPropB.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;

public class ObjectPropsPropsObjectPropNestedPropANestedPropB {
  private @Nullable String mNestedPropC;
  public @Nullable String getNestedPropC() {
    return mNestedPropC;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedPropA.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

public class ObjectPropsPropsObjectPropNestedPropA {
  private ObjectPropsPropsObjectPropNestedPropANestedPropB mNestedPropB;
  public ObjectPropsPropsObjectPropNestedPropANestedPropB getNestedPropB() {
    return mNestedPropB;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;

public class ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement {
  private @Nullable String mStringProp;
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedArrayAsProperty.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import java.util.ArrayList;

public class ObjectPropsPropsObjectPropNestedArrayAsProperty {
  private ArrayList<ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement> mArrayProp;
  public ArrayList<ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement> getArrayProp() {
    return mArrayProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectProp.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;

public class ObjectPropsPropsObjectProp {
  private @Nullable String mStringProp;
  private boolean mBooleanProp;
  private float mFloatProp;
  private int mIntProp;
  private @Nullable String mStringEnumProp;
  private @Nullable Integer mIntEnumProp;
  private ObjectPropsPropsObjectPropObjectArrayProp mObjectArrayProp;
  private ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp mObjectPrimitiveRequiredProp;
  private ObjectPropsPropsObjectPropNestedPropA mNestedPropA;
  private ObjectPropsPropsObjectPropNestedArrayAsProperty mNestedArrayAsProperty;
  public @Nullable String getStringProp() {
    return mStringProp;
  }
  public boolean getBooleanProp() {
    return mBooleanProp;
  }
  public float getFloatProp() {
    return mFloatProp;
  }
  public int getIntProp() {
    return mIntProp;
  }
  public @Nullable String getStringEnumProp() {
    return mStringEnumProp;
  }
  public @Nullable Integer getIntEnumProp() {
    return mIntEnumProp;
  }
  public ObjectPropsPropsObjectPropObjectArrayProp getObjectArrayProp() {
    return mObjectArrayProp;
  }
  public ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp getObjectPrimitiveRequiredProp() {
    return mObjectPrimitiveRequiredProp;
  }
  public ObjectPropsPropsObjectPropNestedPropA getNestedPropA() {
    return mNestedPropA;
  }
  public ObjectPropsPropsObjectPropNestedArrayAsProperty getNestedArrayAsProperty() {
    return mNestedArrayAsProperty;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

public class ObjectPropsProps {
  private ObjectPropsPropsObjectProp mObjectProp;
  public ObjectPropsPropsObjectProp getObjectProp() {
    return mObjectProp;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture POINT_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/PointPropNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;

public class PointPropNativeComponentProps {
  private @Nullable ReadableMap mStartPoint;
  public @Nullable ReadableMap getStartPoint() {
    return mStartPoint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/StringEnumPropsNativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;

public class StringEnumPropsNativeComponentProps {
  private @Nullable String mAlignment;
  public @Nullable String getAlignment() {
    return mAlignment;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture STRING_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/StringPropComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;

public class StringPropComponentProps {
  private @Nullable String mAccessibilityHint;
  private @Nullable String mAccessibilityRole;
  public @Nullable String getAccessibilityHint() {
    return mAccessibilityHint;
  }
  public @Nullable String getAccessibilityRole() {
    return mAccessibilityRole;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ComponentFile1/MultiFile1NativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ComponentFile1;

public class MultiFile1NativeComponentProps {
  private boolean mDisabled;
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
  "java/com/facebook/react/viewmanagers/ComponentFile2/MultiFile2NativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ComponentFile2;

public class MultiFile2NativeComponentProps {
  private boolean mDisabled;
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/MyComponents/MultiComponent1NativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.MyComponents;

public class MultiComponent1NativeComponentProps {
  private boolean mDisabled;
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
  "java/com/facebook/react/viewmanagers/MyComponents/MultiComponent2NativeComponentProps.java" => "/**
* Copyright (c) Facebook, Inc. and its affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.MyComponents;

public class MultiComponent2NativeComponentProps {
  private boolean mDisabled;
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;
